packages/beynac/src/test-utils/source/__fixtures__/errors/bad-import-extension.ts
import { helper as _helper } from "./extension-helper.js";

export { helper } from "./extension-helper.js";
